--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<!-- banner文字开始 -->
 				<div class="bannerText container ">
 					<h1>WHO AM I</h1>
-					<h2>Design & Build Beautiful Crafted Web Experiences</h2>
+					<h2>The best preparation for tomorrow is doing your best today</h2>
 				</div>
 				<!-- banner文字结束 -->
 				<div class="zhanwei" style="display:none"></div>
@@ -107,9 +107,9 @@
 			<div id="aboutme" class="aboutme">
 				<div class="container">
 					<h1 class="head">关于我</h1>
-					<div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 						<p>辽宁政法职业学院 会计 专科</p>
-						<p>学习java开发是一个非常愉快的过程，能将自己的构想以一个网页的形式实现出来，并且用业务逻辑让之变得充实，十分的有趣。对未来的工作充满期待，并且十分享受团队合作所带来的成就感和满足感。多次的社团工作经历让本人对新环境有较强的适应能力，抗压能力。兼职的经历让我养成了吃苦耐劳的精神。为人开朗，并且对生活有热情。 </p>
+						<p>学习全栈开发是一个非常愉快的过程，能将自己的构想以一个网页的形式实现出来，并且用业务逻辑让之变得充实，十分的有趣。对未来的工作充满期待，并且十分享受团队合作所带来的成就感和满足感。多次的社团工作经历让本人对新环境有较强的适应能力，抗压能力。兼职的经历让我养成了吃苦耐劳的精神。为人开朗，并且对生活有热情。 </p>
 					</div>
 
 				</div>
